@@ -4,6 +4,7 @@
 * Added tagging API methods (Samu Voutilainen)
 * Updated documentation (Samu Voutilainen)
 * Added IP related API methods (Samu Voutilainen)
+* Added prices API method (Samu Voutilainen)
 
 === 2.0.0 / 2017-01-27
 
